--- a/index.html
+++ b/index.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./styles/main.css" />
-        <title>Document</title>
-    </head>
-    <body>
-        <div id="idd">
-            <p id="text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam,
-            </p>
-        </div>
 
-        <div id="first">
-            <h1>Be the first know when we launch</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint eum ipsa, excepturi exercitationem
-                molestiae porro obcaecati nisi.
-            </p>
-            <form action="">
-                <input type="email" id="email" placeholder="Enter your email" />
-                <button id="Subscribe">Subscribe</button>
-                <p id="care">We care about your data in our privacy policy.</p>
-            </form>
-        </div>
-        <div>
-            <h1>Submit form</h1>
-            <form action="">
-                <input type="text" id="name" name="Please write you name" placeholder="Your name..">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/main.css" />
+    <title>Document</title>
+</head>
 
-            </form>
-        </div>
-    </body>
+<body>
+    <div id="idd">
+        <p id="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam,
+        </p>
+    </div>
+
+    <div id="first">
+        <h1>Be the first know when we launch</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint eum ipsa, excepturi exercitationem
+            molestiae porro obcaecati nisi.
+        </p>
+        <form action="">
+            <input type="email" id="email" placeholder="Enter your email" />
+            <button id="Subscribe">Subscribe</button>
+            <p id="care">We care about your data in our privacy policy.</p>
+        </form>
+    </div>
+    <div id="grdzeli">
+        <h1 id="Submit">Submit form</h1>
+        <p id="paragrafi">Full name</p>
+        <form action="">
+            <input type="name" id="jandaba" placeholder="Please write you name">
+        </form>
+        <p id="paragrafi">Email</p>
+        <form action="">
+            <input type="name" id="jandaba" placeholder="Please write you Email">
+        </form>
+        <p id="recomment">Would you recomment GeeksforGeeks to a friends?</p>
+        <form action="">
+            <div>
+                <input id="radio" type="radio">
+                <label for="">yes</label>
+            </div>
+            <div>
+                <input id="radio" type="radio">
+                <label for="">yes</label>
+            </div>
+            <div>
+                <input id="radio" type="radio">
+                <label for="">yes</label>
+            </div>
+        </form>
+        <p id="frameworks">Language and frameworks known (Checks all that apply)</p>
+        <form action="">
+            <div>
+                <input id="checkbox" type="checkbox">
+                <label id="C" for="">C</label>
+            </div>
+            <div>
+                <input id="checkbox" type="checkbox">
+                <label id="C" for="">C++</label>
+            </div>
+            <div>
+                <input id="checkbox" type="checkbox">
+                <label id="C" for="">java</label>
+            </div>
+            <div>
+                <input id="checkbox" type="checkbox">
+                <label id="C" for="">phython</label>
+            </div>
+        </form>
+    </div>
+</body>
+
 </html>
